==> LiBoshan/Intelligent-Fish-Tank-System/Stm32_Fish_System/HardWare/Buzzer/Buzzer.c <==
#include "Buzzer.h"

void Buzzer_Init(void)
{
    RCC_APB2PeriphClockCmd(BUZZER_RCC_CLOCK, ENABLE);

    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructure.GPIO_Pin = BUZZER_GPIO_PIN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(BUZZER_GPIO_PORT, &GPIO_InitStructure);

	Buzzer_OFF();
}

// 低电平触发
void Buzzer_ON(void)
{
    GPIO_ResetBits(BUZZER_GPIO_PORT, BUZZER_GPIO_PIN);
}

void Buzzer_OFF(void)
{
    GPIO_SetBits(BUZZER_GPIO_PORT, BUZZER_GPIO_PIN);
}

void Buzzer_Turn(void)
{
    if(GPIO_ReadOutputDataBit(BUZZER_GPIO_PORT, BUZZER_GPIO_PIN) == 0)
    {
       Buzzer_OFF();
    }
    else
    {
        Buzzer_ON();
    }
    
}
